[package]
name = "packet_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-space-core = { path = "../rs-space-core" }
tokio = { version = "1.21.0", features = [ "full" ] }
log = "0.4"
log4rs = "1.0"
rustop = "1.1"
serde_json = "1"
async-recursion = "1.0.0"