[package]
name = "raf_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-space-core = { path = "../rs-space-core" }
rs-space-sle = { path = "../rs-space-sle" }
tokio = { version = "1.21.0", features = [ "full" ] }
log = "0.4"
log4rs = "1.0"
rustop = "1.1"
rasn = "0.7"
