[package]
name = "rs-space-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = [ "full" ] }
byteorder = "1.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
hex = "0.4.3"
