[package]
name = "rs-space-sle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = [ "full" ] }
byteorder = "1.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.17"
hex = "0.4.3"
rasn = "0.6.1"
rs-space-core = { path = "../rs-space-core" }
