[package]
name = "rs-space-sle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = "0.7.8"
byteorder = "1.4.3"
bytes = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.17"
hex = "0.4.3"
rasn = "0.7"
num-traits = "0.2.15"
num-derive = "0.3"
num = "0.4"
rs-space-core = { path = "../rs-space-core" }
log = "0.4"
nom = "7"
function_name = "0.3.0"
sha1_smol = "1"
hmac-sha256 = "1"
rand = "0.8"